sigue con errores

--- a/JavaPoolSirviendoHernan/nbproject/private/private.properties
+++ b/JavaPoolSirviendoHernan/nbproject/private/private.properties
@@ -1,4 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\GOMEZ MARQUEZ\\AppData\\Roaming\\NetBeans\\8.0\\tomcat70.properties
+deploy.ant.properties.file=C:\\Users\\adsi\\AppData\\Roaming\\NetBeans\\8.0.1\\tomcat70.properties
 j2ee.server.domain=C:/tomcat_7
-j2ee.server.instance=tomcat70:home=C:\\tomcat_7:base=C:\\tomcat_7
-user.properties.file=C:\\Users\\GOMEZ MARQUEZ\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+j2ee.server.home=C:/apache-tomcat-7.0.56
+j2ee.server.instance=tomcat70:home=C:\\apache-tomcat-7.0.56
+selected.browser=Chrome.INTEGRATED
+user.properties.file=C:\\Users\\adsi\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
